website/websites/u64q/code/fibonacci.2.pyston.log

 Wed, 28 Sep 2022 09:04:44 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-2.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-2.pyston", line 10
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
